[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "1.0.0"
description = "CLI-based background job queue system"
authors = [{name = "Sahana B"}]
requires-python = ">=3.9"

[project.scripts]
queuectl = "queuectl.cli.commands:main"
